# latex2pydata

./: .gitignore  README.md
latex/: CHANGELOG.md  README.md
latex/latex2pydata/: README  latex2pydata.dtx  latex2pydata.ins  latex2pydata.sty  latexmkrc
latex/test/: README.md  edefvalue_test_pass.json  edefvalue_test_pass.tex  escape_detokenize_test_pass.tex  reuse_file_test_pass.json  reuse_file_test_pass.tex  schema_test_pass.json  schema_test_pass.tex  scope_test_pass.json  scope_test_pass.tex  test_latex2pydata.py  toplevel_bufferdict_double_key_test_fail.tex  toplevel_bufferdict_double_value_test_fail.tex  toplevel_dict_double_value_test_fail.tex  toplevel_dict_no_open_test_fail.tex
latex2pydata/: latex2pydata.ins
python/: CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
python/latex2pydata/: __init__.py  err.py  loading.py  schema.py  util.py  version.py
python/test/: test_loads.py
test/: escape_detokenize_test_pass.json  test_latex2pydata.py  toplevel_bufferdict_test_pass.json  toplevel_bufferdict_test_pass.tex  toplevel_dict_double_key_test_fail.tex  toplevel_dict_no_close_test_fail.tex  toplevel_dict_test_pass.tex  toplevel_list_test_pass.json  toplevel_list_test_pass.tex
